--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Readit</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
+  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -13,11 +14,14 @@
     <%= link_to 'Sign Out', destroy_user_session_path, :method => :delete %>
   <% else %>
     <%= link_to "Sign In", new_user_session_path %>
+    |
     <%= link_to "Register", new_user_registration_path %>
   <% end %>
   
   <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+  <% if flash[:alert].present? %>
+    <p class="alert"><%= alert %></p>
+  <% end %>
 
 
 <%= yield %>
