--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,10 +2,13 @@
 
 <h3><%= link_to "Submit a Link", new_link_path%></h2>
 
-<br><br>
 
 <h4>See what MKS is talking about...</h4>
+
+<ul>
 <% @links.each do |link|%>
-	<%= link_to link.title, link %>
-	<br/>
+	<li><%= link_to link.title, link %></li>
 <% end %>
+</ul>
+
+<%= will_paginate @links %>
