--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -9,7 +9,7 @@
   -@links.each do |link|
     -if link.url == nil
       %li= link_to link.title, link.url
-      = link_to 'comments', link
+      = link_to 'Comments', link
       %br
     -else 
       %li= link_to link.title, link 
