--- a/app/views/links/new.html.haml
+++ b/app/views/links/new.html.haml
@@ -2,7 +2,7 @@
   %h1 Add A New Link 
   - if @link.errors.any? 
     #error_explanation
-      %h2= pluralize(@link.errors.count, "error") +'prohibited this idea from being saved:'
+      %h2= pluralize(@link.errors.count, "error") +'prohibited this link from being saved:'
 
   %ul
     = @link.errors.full_messages.each do |msg| 
@@ -21,4 +21,5 @@
     %br
     = f.text_field :description 
   
+  / hidden_field_tag
   .actions= f.submit 
