--- a/app/views/links/show.html.haml
+++ b/app/views/links/show.html.haml
@@ -1,2 +1,20 @@
 %h1= link_to @link.title, @link.url
 %p= @link.description
+
+%h2 Make a Comment
+= form_for [@link,@comment] do |f|
+
+  - if @comment.errors.any? 
+    #error_explanation
+      %h2= pluralize(@comment.errors.count, "error") +'prohibited this comment from being saved:'
+
+  %ul
+    = @link.errors.full_messages.each do |msg| 
+      %li= msg
+
+  .field
+    = f.label :message
+    = f.text_area :message, :placeholder => "What do you think?"
+
+  
+  .actions= f.submit 
